# sr-engine

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  plan.md  project_design.md  pyproject.toml
benchmarks/: serve_benchmark.cpp
build-tsan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  sr_engine_example  sr_engine_hot_swap  sr_engine_tests
docs/: flight_kernels.md  graph_store.md  improvement_plan.md  life_time.md  optimization_plan.md  rpc.md  rpc_kernels.md  rpc_scatter_gather.md  runtime.md  serve_layer.md  tracing.md  type-encoding.md
docs/plans/: 2025-01-17-spdlog-integration-design.md  2026-01-16-executor-scheduling-design.md  2026-01-16-node-fusion-design.md  2026-01-17-typeid-registry-valuebox-design.md  2026-01-17-typeid-valuebox-migration.md  2026-01-18-brpc-transport-design.md  2026-01-19-brpc-transport.md
examples/: arrow_server.cpp  benchmark_executor.cpp  complex.cpp  hot_swap.cpp  ipc_server.cpp  mock_api_c.cpp  simple.cpp  sr_ipc_server.cpp
src/common/logging/: flags.cpp  log.cpp  log.hpp
src/compat/: quick_exit_compat.cpp  quick_exit_compat.hpp
src/engine/: dsl.cpp  dsl.hpp  error.hpp  fusion.cpp  fusion.hpp  graph_store.cpp  graph_store.hpp  kernel_adapt.hpp  kernel_types.hpp  plan.cpp  plan.hpp  registry.cpp  registry.hpp  trace.hpp  type_abi.h  type_encoding.cpp  type_encoding.hpp  type_hash.cpp  type_hash.hpp  type_names.hpp  type_system.cpp  type_system.hpp  types.hpp  version.cpp  version.hpp
src/kernel/: flight_kernels.cpp  flight_kernels.hpp  rpc_generic_kernel.hpp  rpc_kernels.cpp  rpc_kernels.hpp  rpc_policies.hpp  rpc_serializer.hpp  rpc_trampoline.hpp  rpc_transport_grpc.cpp  sample_kernels.cpp  sample_kernels.hpp
src/reflection/: expected.hpp
src/runtime/: executor.cpp  executor.hpp  executor_legacy.cpp  executor_legacy.hpp  frozen_env.hpp  runtime.cpp  runtime.hpp  serve.cpp  serve.hpp
src/runtime/serve/: common.hpp  flight.cpp  flight.hpp  grpc.cpp  grpc.hpp  ipc.cpp  ipc.hpp  rpc_env.cpp  rpc_env.hpp  serve.cpp  serve.hpp
tests/: engine_tests.cpp  rpc_test.cpp  serve_test.cpp  test_concurrency.cpp  test_core.cpp  test_rpc_abstractions.cpp  test_rpc_policies.cpp  test_rpc_trampoline.cpp  test_runtime.cpp  test_support.hpp  test_trace.cpp  type_system_test.cpp
